__未配置好的工程——stm32f407VET6 稍微修改了一下介绍

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,5 @@
 /cmake-build-debug/.cmake/api/v1/query/toolchains-v1
 /cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-b3c899156cbb1694c35e.json
 /cmake-build-debug/CMakeFiles/Furina.elf.dir/Application/voiceStorageAndPlay.cpp.obj
+/cmake-build-debug/
+/cmake-build-release/
