__【未配置好】根据远古代码写的SPI Flash驱动

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,8 @@ else ()
 endif ()
 
 #添加宏定义
-add_definitions(-DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx)
+# 使用Debug，使用HAL库。    -DUSE_FULL_LL_DRIVER 使用LL库
+add_definitions(-DDEBUG -DUSE_HAL_DRIVER  -DSTM32F407xx)
 #添加头文件
 include_directories(
         # 官方自带库
