__【未配置好】准备着手双音频信号发生器

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ include_directories(
         GUI/Base
 
         # 库
+        Library/Data
         Library/Third_Party/
         # FreeRTOS库
         Library/Third_Party/FreeRTOS/Source/include
@@ -99,7 +100,8 @@ file(GLOB_RECURSE SOURCES
         "Drivers/*.*"
         "GUI/*.*"
 
-        # LVGL库
+        # 数据库
+        "Library/Data/*.*"
         "Library/Third_Party/lvgl/src/*.*"
         "Library/Third_Party/lvgl/lvgl.h"
         "Library/Third_Party/lvgl/lv_conf.h"
