--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@
 /cmake-build-debug/Furina.hex
 /cmake-build-debug/Furina.map
 /cmake-build-debug/CMakeFiles/Furina.elf.dir/Library/Third_Party/lvgl/src/extra/libs/gif/gifdec.c.obj
-/cmake-build-debug/CMakeFiles/Furina.elf.dir/GUI/Base/GUI_Init.cpp.obj
+/cmake-build-debug/CMakeFiles/Furina.elf.dir/GUI/Base/lvgl_init.cpp.obj
 /cmake-build-debug/CMakeFiles/Furina.elf.dir/Library/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c.obj
 /cmake-build-debug/.cmake/api/v1/reply/index-2024-09-22T09-05-24-0679.json
 /cmake-build-debug/CMakeFiles/Furina.elf.dir/BSP/LCD/lcd.c.obj
