【初始】主项目——已解决。吃个饭回来，发现原因是使用了cout，ROM直接增加了两百多KB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ file(GLOB_RECURSE SOURCES
         "BSP/*.*"
         "Drivers/*.*"
         "GUI/Base/*.*"
-        "${UI_DIR}/ui.cpp"
+        "${UI_DIR}/*.*"
         "GUI/Component/*.*"
         "GUI/Events/*.*"
 
