【双音频信号发生器】发现绘制图表时会有很严重的性能问题。现准备尝试双缓冲

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ add_compile_options($<$<COMPILE_LANGUAGE:ASM>:-x$<SEMICOLON>assembler-with-cpp>)
 #-Oz:极度优化大小,进一步优化生成的代码大小，比 -Os更激进,可能会牺牲一些性能。
 #-flto:在链接阶段进行优化,允许进行跨文件的优化，进一步提高性能，但耗时间（项目本来就小我不在乎）
 #-fprofile-generate（生成配置文件） 和 -fprofile-use（基于配置文件的优化）
-add_compile_options(-Og -g)
+add_compile_options(-Ofast -g)
 # 不调试了再开启
 #add_compile_options(-flto )
 
@@ -54,7 +54,7 @@ add_compile_options(-Og -g)
 add_definitions(-DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx)
 
 # ----------------------------------设置你的UI路径（选择项目）------------------------------
-set(UI_DIR GUI/UI/voiceStorageAndPlay)
+set(UI_DIR GUI/UI/signalGenerator)
 # ----------------------------------设置你的UI路径（选择项目）------------------------------
 
 #添加头文件
