【双音频信号发生器】调整项目组织结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,6 @@ project(Furina C CXX ASM)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_STANDARD 11)
 
-# uncomment to mitigate c++17 absolute addresses warnings
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register")
-
 # 添加编译标志
 #Uncomment for hardware floating point
 add_compile_definitions(ARM_MATH_CM4;ARM_MATH_MATRIX_CHECK;ARM_MATH_ROUNDING)
@@ -53,94 +50,135 @@ add_compile_options(-Ofast -g)
 # 使用Debug，使用HAL库。    -DUSE_FULL_LL_DRIVER 使用LL库
 add_definitions(-DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx)
 
-# ----------------------------------设置你的UI路径（选择项目）------------------------------
-set(UI_DIR GUI/UI/signalGenerator)
-# ----------------------------------设置你的UI路径（选择项目）------------------------------
+# --------------------------------------选择你的项目--------------------------------
+# 如果你是在CLion里，那么可以直接在斜杆后面输入首字母，会自动弹出相关项目选项
+set(APP_DIR Application/signalGenerator)
+# --------------------------------------选择你的项目------------------------------
 
-#添加头文件
-include_directories(
-        # 官方自带库
+# 提取 APP_DIR 的末尾部分
+string(REGEX REPLACE "^.*/(.+)$" "\\1" APP_DIR_LAST_PART "${APP_DIR}")
+
+# 拼接新的 UI_DIR
+set(UI_DIR "GUI/UI/${APP_DIR_LAST_PART}")
+
+
+#-------------------------------------------库-------------------------------------------
+# 官方驱动库
+file(GLOB_RECURSE DRIVERS_SRC "Drivers/STM32F4xx_HAL_Driver/Src/*.c")
+add_library(libdrivers STATIC ${DRIVERS_SRC})
+target_include_directories(libdrivers PUBLIC
+        Drivers
         Drivers/STM32F4xx_HAL_Driver/Inc
         Drivers/STM32F4xx_HAL_Driver/Inc/Legacy
-        Drivers/CMSIS/Device/ST/STM32F4xx/Include Drivers/CMSIS/Include
+        Drivers/CMSIS/Device/ST/STM32F4xx/Include
+        Drivers/CMSIS/Include
+)
 
-        # 应用
-        Application
-        Application/Base
-        Application/Conf
-
-        # 模块
-        Module
-
-        # 板级支持包
-        BSP/Base
-        BSP/Core
-        BSP/LCD
-        BSP/Key
-        BSP/SPI_Flash
-        BSP/Timer
-        BSP/ADC
-        BSP/DAC
-
-        # GUI
-        ${UI_DIR}
-        GUI/Base
-        GUI/Component
-        GUI/Events
-
-        # -----------------库-----------------
-        Library/Data
-        # --------第三方-------
+#---------------------第三方库-----------------------
+# -----lvgl库-----
+file(GLOB_RECURSE LVGL_SRC
+        # LVGL库
+        "Library/Third_Party/lvgl/src/*.c"
+        "Library/Third_Party/lvgl/examples/porting/*.c"
+)
+add_library(liblvgl STATIC ${LVGL_SRC})
+target_include_directories(liblvgl PRIVATE  BSP/inc)
+target_include_directories(liblvgl PUBLIC
         Library/Third_Party/
-        # FreeRTOS库
+        Library/Third_Party/lvgl/src
+        Library/Third_Party/lvgl/examples/porting
+)
+# 依赖BSP中的lcd库 耦合有些严重，后面慢慢改
+target_link_libraries(liblvgl PUBLIC libdrivers)
+
+# ------FreeRTOS库------
+# 不愧是CubeMX生成的库，和HAL耦合得太严重了
+file(GLOB_RECURSE FREERTOS_SRC
+        "Library/Third_Party/FreeRTOS/Source/*.c"
+        "Library/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c"
+        "Library/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c"
+)
+add_library(libfreertos STATIC ${FREERTOS_SRC})
+target_include_directories(libfreertos PRIVATE
+        Drivers
+        Drivers/STM32F4xx_HAL_Driver/Inc
+        Drivers/CMSIS/Include
+        Drivers/CMSIS/Device/ST/STM32F4xx/Include)
+target_include_directories(libfreertos PUBLIC
+        Library/Third_Party/FreeRTOS
         Library/Third_Party/FreeRTOS/Source/include
         Library/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2
         Library/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
-        # LVGL库
-        Library/Third_Party/lvgl/src
-        Library/Third_Party/lvgl/examples/porting
-        # --------CMSIS-------
-        # DSP
+)
+
+# ------DSP库------
+file(GLOB_RECURSE DSP_SRC
+        "Library/CMSIS/DSP/Source/TransformFunctions/arm_cfft_f32.c"
+        "Library/CMSIS/DSP/Source/TransformFunctions/arm_cfft_init_f32.c"
+        "Library/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c"
+)
+add_library(libdsp STATIC ${DSP_SRC})
+target_include_directories(libdsp PRIVATE Drivers/CMSIS/Include)
+target_include_directories(libdsp PUBLIC
         Library/CMSIS/DSP/Include
         Library/CMSIS/DSP/PrivateInclude
 )
 
 
-# 添加资源文件
-file(GLOB_RECURSE SOURCES
-        "BSP/Core/*.s"
-        "Drivers/STM32F4xx_HAL_Driver/Src/*.c"
+#---------------------用户库-----------------------
+# ------BSP库------
+file(GLOB_RECURSE BSP_SRC "BSP/src/*.c")
+add_library(libbsp STATIC ${BSP_SRC})
+target_include_directories(libbsp PUBLIC
+        BSP/inc
+)
+target_link_libraries(libbsp PUBLIC libdrivers liblvgl)
 
-        # 三层划分
-        "Application/*.cpp"
-        "Module/*.cpp"
-        "BSP/*.c"
 
-        # GUI
+# ------Data库------
+file(GLOB_RECURSE DATA_SRC "Library/Data/*.c")
+add_library(libdata STATIC ${DATA_SRC})
+target_include_directories(libdata INTERFACE
+        Library/Data
+)
+
+# ------GUI库------
+file(GLOB_RECURSE GUI_SRC
         "${UI_DIR}/*.*"
         "GUI/Base/GUI.cpp"
         "GUI/Component/*.cpp"
         "GUI/Events/*.cpp"
-
-        # -----------------库-----------------
-        # 数据库
-        "Library/Data/*.*"
-        # --------第三方-------
-        # LVGL库
-        "Library/Third_Party/lvgl/src/*.c"
-        "Library/Third_Party/lvgl/examples/porting/*.c"
-        # FreeRTOS库
-#        "Library/Third_Party/FreeRTOS/Source/*.c"
-#        "Library/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c"
-#        " Library/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c"
-
-        # --------CMSIS-------
-        # DSP
-        # 现在CMakeLists还没有用熟练，先凑合
-        "Library/CMSIS/DSP/Source/TransformFunctions/arm_cfft_f32.c"
-        "Library/CMSIS/DSP/Source/TransformFunctions/arm_cfft_init_f32.c"
-        "Library/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c"
 )
+add_library(libgui STATIC ${GUI_SRC})
+target_include_directories(libgui PUBLIC
+        ${UI_DIR}
+        GUI/Base
+        GUI/Component
+        GUI/Events
+)
+# 依赖lvgl库
+target_link_libraries(libgui PUBLIC liblvgl libbsp)
+
+
+# ------Module库------
+file(GLOB_RECURSE MODULE_SRC "Module/src/*.cpp")
+add_library(libmodule STATIC ${MODULE_SRC})
+target_include_directories(libmodule PUBLIC Module/inc)
+target_link_libraries(libmodule PRIVATE libbsp libdsp libdata)
+
+# ------Application库------
+file(GLOB_RECURSE APPLICATION_SRC "${APP_DIR}/*.cpp" "Application/Base/*.cpp")
+add_library(libapp STATIC ${APPLICATION_SRC})
+target_include_directories(libapp PUBLIC Application/Base)
+# 需要链接 libdrivers libdsp libdata libgui libfreertos
+target_link_libraries(libapp PUBLIC libdrivers libdsp libdata libgui libbsp libmodule)
+
+
+# 包含公共目录
+include_directories(Application/Conf  ${APP_DIR})
+
+# 这里面不能直接添加到静态库里
+file(GLOB_RECURSE SOURCES "Core/*.*")
 
 # 设置链接脚本
 set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/STM32F407VETX_FLASH.ld)
@@ -162,6 +200,7 @@ add_link_options(-Wl,-gc-sections,--print-memory-usage,-Map=${PROJECT_BINARY_DIR
 #add_link_options(-Wl,--strip-all)# 好像没有作用
 
 add_executable(${PROJECT_NAME}.elf ${SOURCES} ${LINKER_SCRIPT})
+target_link_libraries(${PROJECT_NAME}.elf PRIVATE libapp)
 
 set(HEX_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.hex)
 set(BIN_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.bin)
